Bug 1358019 - Reimplement word-break:break-all to better match the CSS Text spec. r=masayuki

Differential Revision: https://phabricator.services.mozilla.com/D19480

--HG--
extra : moz-landing-system : lando